--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -49,7 +49,7 @@
       "View_All_Tractor_Comparison":"View all tractor comparisons",
       "Testimonials":"Testimonials",
       "Watch_Video":"Watch Video",
-      "Content_Gallery":"Content Gallery",
+      "Content_Gallery":"Blog Section",
       "View_All":"View all",
       "Latest_News_And_Update":"Latest News & Updates",
       "Warranty":"Warranty",
@@ -69,11 +69,11 @@
       "Make_an_Enquiry":"Make an Enquiry",
       "Call_Us_Now":" Call Us Now",
       "@_2024_Tractor":"© 2024 Tractor World All Rights Reserved.",
-      "Advertise_With_Us":"Advertise With Us  -  Privacy Policy  -  Sitemap",
+      "Advertise_With_Us":"Advertise With Us - Privacy Policy - Sitemap",
       "Useful_Links":"Useful Links",
       "About_Us":"About Us",
       "Latest_News":"Latest News",
-      "Live_Inventory":"Live inventory",
+      "Live_Inventory":"Live Tractor Stock",
       "Terms_and_Conditions":"Terms and conditions",
       "Get_In_Touch":" Get in touch",
       "Tool_Free_Number":"Toll Free Number",
@@ -133,13 +133,13 @@
       "You_Gett_Instant":"You can get instant money in an",
       "Account":"account.",
       "New_Way_Farming":"Tractor Loan Translates to a New Way Of Farming!",
-      "Tractors_Are_Essential_Text":"Tractors are essential tools for farmers, aiding in various tasks, from planting seeds to transporting harvested crops. For many small-scale farmers in India, purchasing a tractor can be financially challenging. Tractor loans or finances become a crucial solution in such situations. Tractor loans fall under the agricultural loan category and are provided by leading banks, government financial bodies, and non-banking financial companies (NBFCs). These loans facilitate the easy acquisition of new and mini.  Individuals or groups can apply, and repayment, managed through equated monthly instalments (EMIs), can be collective or individual within the group. Before buying a tractor for your farm, knowing the interest rates on tractor loans from various banks is vital. This helps you make an informed decision and find the best financing option for your agricultural investment. Compare rates to find the most suitable choice. Also, the Tractor Loan EMI Calculator tool is a perfect way to calculate your tractor loan EMI.",
+      "Tractors_Are_Essential_Text":"Tractors are essential for today's farming, boosting efficiency and productivity. For many farmers, especially those with smaller operations, the cost of new equipment can be a significant hurdle. Fortunately, there are more affordable options available. Agricultural loans, offered by banks, government institutions, and NBFCs, make it possible to acquire the tractor you need. These loans often come with manageable repayment plans through EMIs. Before purchasing, it's wise to compare loan interest rates from different lenders to find the best terms. A Tractor Loan EMI Calculator is a helpful tool for estimating monthly payments and budgeting your investment.",
       "EMI_cal":"EMI cal",
       "Int_Rate_Comparison":"Tractor Loan Interest Rate Comparison",
       "Compare_The_New_Tractor_Loan_Int":"Compare the new tractor loan interest rate below."
     },
     "Gallery":{
-      "Content_Gallery":"Content Gallery",
+      "Content_Gallery":"Blog Section",
       "New_Updates":"New Updates",
       "Recent_Posts":"Recent Posts"
     },
