--- a/public/locales/mr/common.json
+++ b/public/locales/mr/common.json
@@ -1,6 +1,6 @@
 {
   "compareTractor": "ट्रॅक्टर तुलना करा",
-  "testimonials": "प्रशस्तिपत्र",
+  "testimonials": "ग्राहक अनुभव",
   "dealerLocater": "डीलर लोकेटर",
   "CheckTractorDetails": "ट्रॅक्टरचे तपशील तपासा",
   "FindTractor": "Find The Right Tractor For You",
@@ -52,7 +52,7 @@
     "Content_Hub":"सामग्री हब",
     "Videos":"व्हिडिओ",
     "Blog":"ब्लॉग",
-    "Explore_Tractor_World":"ट्रॅक्टर वर्ल्डचा अभ्यास करा",
+    "Explore_Tractor_World":"ट्रॅक्टर वर्ड बद्दल माहिती",
     "Live_Inventory":"थेट यादी",
     "Why_Choose_Us":"आम्हाला का निवडा",
     "Over_Deals":"15,000 हून अधिक सौदे",
@@ -60,16 +60,16 @@
     "Kiusmod_Tempor":"कियुसमोड टेम्पोर इन्किडिडंट उत लेबोरे सेड डोलोरे मॅग्ना अलीक्वाय एनिम अड मिनिम वीनियम क्वीस नोस्ट्रुड व्यायाम उल्लामको लेबरिस निसी उत अलीक्विप एक्स ईए रेप्रेहें डेरिटिन व्होलुप्टे.",
     "Buy_The_Right":"योग्य ट्रॅक्टर खरेदी करण्यासाठी तुलना करा",
     "COMPARE":"तुलना करा",
-    "View_All_Tractor_Comparison":"सर्व ट्रॅक्टर तुलना पहा",
-    "Testimonials":"प्रशस्तिपत्र",
-    "Watch_Video":"व्हिडिओ पहा",
-    "Content_Gallery":"सामग्री गॅलरी",
+    "View_All_Tractor_Comparison":"सर्व ट्रॅक्टर च्या तुलना पहा",
+    "Testimonials":"ग्राहक अनुभव",
+    "Watch_Video":"विडिओ पहा",
+    "Content_Gallery":"माहिती कक्ष",
     "View_All":"सर्व पहा",
     "Latest_News_And_Update":"ताज्या बातम्या आणि अपडेट्स",
-    "Warranty":"वारंटी",
+    "Warranty":"वॉरंटी",
     "Easy_EMI":"सुलभ ईएमआय आणि किंमत निर्धारण",
     "Documenting":"दस्तऐवजीकरण",
-    "Mahendra_Financing":"महेंद्र फाइनेंसिंग",
+    "Mahendra_Financing":"महेन्द्रा फाइनेंसिंग",
     "Call_Now":"Call Now",
     "Request_Call":"कॉल बॅकची विनंती करा",
     "Call":"कॉल",
@@ -78,15 +78,15 @@
       "Submit":"सबमिट करा"
   },
   "Footer": {
-    "Find_a_Dealer": "विक्रेता शोधा",
+    "Find_a_Dealer": "डीलर शोधा",
     "Make_an_Enquiry": "चौकशी करा",
-    "Call_Us_Now": " आता आम्हाला कॉल करा",
-    "@_2024_Tractor": "© 2024 ट्रॅक्टर वर्ल्ड सर्व हक्क राखीव.",
+    "Call_Us_Now": " कॉल करा",
+    "@_2024_Tractor": "© 2025 Tractor World All Rights Reserved.",
     "Advertise_With_Us": "आमच्यासोबत जाहिरात करा - गोपनीयता धोरण - साइटमॅप",
-    "Useful_Links": "उपयुक्त दुवे",
-    "About_Us": "आमच्याबद्दल",
+    "Useful_Links": "उपयुक्त लिंक",
+    "About_Us": "आमच्या बद्दल माहिती",
     "Latest_News": "ताज्या बातम्या",
-    "Live_Inventory": "थेट यादी",
+    "Live_Inventory": "थेट ट्रॅक्टर यादी",
     "Terms_and_Conditions": "अटी आणि शर्ती",
     "Get_In_Touch": "संपर्कात रहा",
     "Tool_Free_Number": "टोल फ्री क्रमांक",
@@ -98,9 +98,9 @@
   },
   "About": {
     "Bring_You_To_Future": "आम्ही तुम्हाला भविष्यात आणतो",
-    "Tractor_World": "ट्रॅक्टर विश्व",
+    "Tractor_World": "ट्रॅक्टर वर्ल्ड",
     "Fully_Integrated_Compony": "ट्रॅक्टर वर्ल्ड ही संपूर्णपणे अनुलंब समाकलित कंपनी आहे, ज्यामध्ये ऑटोमोटिव्ह घटक, एकत्रित आणि वाहनांचे संपूर्ण स्पेक्ट्रम डिझाइन, विकास आणि निर्मितीमध्ये कौशल्य आहे|",
-    "Tractors_By_Brands": "ब्रँडद्वारे ट्रॅक्टर",
+    "Tractors_By_Brands": "ब्रँड नुसार ट्रॅक्टर",
     "Right_Equipment": "आम्ही तुम्हाला योग्य उपकरणे शोधण्याचे वचन देतो",
     "Get_Your_Rentals": "सोप्या चरणांमध्ये तुमचे भाडे मिळवा"
   },
@@ -120,17 +120,17 @@
     "Tehsil_or_Taluka": "तालुका",
     "Select_Taluka": "तालुका निवडा",
     "Find_Dealer": "डीलर शोधा",
-    "Tractore_Dealer_List": "Tractor Dealer List",
+    "Tractore_Dealer_List": "ट्रैक्टर डीलर सूची",
     "Know_More": "अधिक माहिती मिळवा"
   },
   "Loan": {
     "Apply_Loan": "कर्जासाठी अर्ज करा",
     "Loan": "कर्ज",
     "Name": "नाव",
-    "Enter_Name": "आपले नाव प्रविष्ट करा",
+    "Enter_Name": "आपलं नाव टाका",
     "Mobile_No": "मोबाइल नंबर",
-    "Enter_Mobile_NO": "आपला मोबाईल नंबर प्रविष्ट करा",
-    "Apply_Now": "आता अर्ज करा",
+    "Enter_Mobile_NO": "आपला मोबाईल नंबर टाका",
+    "Apply_Now": "आत्ताच अर्ज करा",
     "Loan_Steps": "4 चरणांत नवीन ट्रॅक्टर कर्ज",
     "Get_New_Tractor_Loan": "या 4 चरणांद्वारे लवकर नवीन ट्रॅक्टर कर्ज मिळवा",
     "Fill_The_Form": "फॉर्म भरा",
@@ -146,23 +146,23 @@
     "You_Gett_Instant": "आपण तात्काळ पैसे मिळवू शकता",
     "Account": "खाता",
     "New_Way_Farming": "ट्रॅक्टर कर्ज शेतीच्या नवीन पद्धतीत रूपांतरित होते!",
-    "Tractors_Are_Essential_Text": "ट्रॅक्टर शेतकऱ्यांसाठी आवश्यक साधने आहेत, जे विविध कार्यांमध्ये मदत करतात, बीज पेरणेपासून ते कापलेली पिके वाहतूक करणे. भारतातील अनेक लहान शेतकऱ्यांसाठी ट्रॅक्टर खरेदी करणे आर्थिकदृष्ट्या आव्हानात्मक असू शकते. अशा परिस्थितीत ट्रॅक्टर कर्ज किंवा वित्तीय सहाय्य एक महत्त्वपूर्ण उपाय बनतो. ट्रॅक्टर कर्ज कृषी कर्ज श्रेणीमध्ये येतात आणि प्रमुख बँका, सरकारी वित्तीय संस्थांचे आणि नॉन-बँकिंग वित्तीय कंपन्या (NBFCs) प्रदान करतात. हे कर्ज नवीन आणि लघु ट्रॅक्टरच्या सहज अधिग्रहणाला सक्षम करतात. व्यक्ती किंवा गट अर्ज करू शकतात आणि मासिक हप्त्यांद्वारे (EMIs) चुकवणे, गटामध्ये सामूहिक किंवा वैयक्तिक असू शकते. आपल्या शेतासाठी ट्रॅक्टर खरेदी करण्यापूर्वी, विविध बँकांकडून ट्रॅक्टर कर्जावर व्याजदर जाणून घेणे महत्त्वाचे आहे. हे तुम्हाला एक माहितीपूर्ण निर्णय घेण्यात मदत करते आणि आपल्या कृषी गुंतवणुकीसाठी सर्वोत्तम वित्तीय पर्याय शोधण्यात मदत करते. दरांची तुलना करा जेणेकरून तुम्हाला सर्वात योग्य पर्याय मिळू शकेल. याशिवाय, ट्रॅक्टर कर्ज EMI कॅल्क्युलेटर टूल तुमच्या ट्रॅक्टर कर्ज EMI ची गणना करण्याचा एक उत्कृष्ट मार्ग आहे.",
+    "Tractors_Are_Essential_Text": "ट्रॅक्टर शेतकऱ्यांसाठी आवश्यक साधन आहे, जे विविध कार्यांमध्ये मदत करतात, बीज पेरणेपासून ते कापलेली पिके वाहतूक करणे. भारतातील अनेक लहान शेतकऱ्यांसाठी ट्रॅक्टर खरेदी करणे आर्थिकदृष्ट्या आव्हानात्मक असू शकते. अशा परिस्थितीत ट्रॅक्टर कर्ज किंवा वित्तीय सहाय्य एक महत्त्वपूर्ण उपाय बनतो. ट्रॅक्टर कर्ज कृषी कर्ज श्रेणीमध्ये येतात आणि प्रमुख बँका, सरकारी वित्तीय संस्थांचे आणि नॉन-बँकिंग वित्तीय कंपन्या (NBFCs) प्रदान करतात. हे कर्ज नवीन आणि लघु ट्रॅक्टरच्या सहज अधिग्रहणाला सक्षम करतात. व्यक्ती किंवा गट अर्ज करू शकतात आणि मासिक हप्त्यांद्वारे (EMIs) चुकवणे, गटामध्ये सामूहिक किंवा वैयक्तिक असू शकते. आपल्या शेतासाठी ट्रॅक्टर खरेदी करण्यापूर्वी, विविध बँकांकडून ट्रॅक्टर कर्जावर व्याजदर जाणून घेणे महत्त्वाचे आहे. हे तुम्हाला एक माहितीपूर्ण निर्णय घेण्यात मदत करते आणि आपल्या कृषी गुंतवणुकीसाठी सर्वोत्तम वित्तीय पर्याय शोधण्यात मदत करते. दरांची तुलना करा जेणेकरून तुम्हाला सर्वात योग्य पर्याय मिळू शकेल. याशिवाय, ट्रॅक्टर कर्ज EMI कॅल्क्युलेटर टूल तुमच्या ट्रॅक्टर कर्ज EMI ची गणना करण्याचा एक उत्कृष्ट मार्ग आहे.",
     "EMI_cal": "ईएमआय कॅल्क्युलेटर",
     "Int_Rate_Comparison": "ट्रॅक्टर कर्ज व्याज दरांची तुलना",
     "Compare_The_New_Tractor_Loan_Int": "खाली नवीन ट्रॅक्टर कर्ज व्याज दरांची तुलना करा."
   },
   "Gallery": {
-    "Content_Gallery": "सामग्री गॅलरी",
+    "Content_Gallery": "माहिती कक्ष",
     "New_Updates": "नवीन अद्यतने",
     "Recent_Posts": "अलीकडील पोस्ट"
   },
   "Contact":{
-    "About_Requirement":"आपल्या आवश्यकता आम्हाला सांगा आणि कोणतेही प्रश्न आम्हाला लिहा. आमची समर्थन टीम तुम्हाला 24 तासांच्या आत मदत करेल",
+    "About_Requirement":"आपल्या आवश्यकता आम्हाला सांगा आणि कोणतेही प्रश्न आम्हाला लिहा. आमची टीम तुम्हाला 24 तासांच्या आत मदत करेल",
     "Email_Id":"ईमेल आयडी",
     "Enter_Email":"आपला ईमेल आयडी प्रविष्ट करा",
     "Message":"संदेश",
     "Your_Message":"तुमचा संदेश",
-    "Submit_Request":"अनुरोध सबमिट करा",
+    "Submit_Request":"सबमिट करा",
     "Tactor_In":"tractorworld.in",
     "Contact_No":"+91 95533 53077"
   },
